fix: elevate side menu and hamburger z-index to 1,000,000 to prevent layout blocking

--- a/src/components/layout/Navbar/Nav/style.module.scss
+++ b/src/components/layout/Navbar/Nav/style.module.scss
@@ -4,7 +4,7 @@
     position: fixed;
     right: 0;
     top: 0;
-    z-index: 3;
+    z-index: 1000000;
     color: white;
 
     .body{
