--- a/src/components/layout/Navbar/style.module.scss
+++ b/src/components/layout/Navbar/style.module.scss
@@ -3,7 +3,7 @@
     top: 0;
     left: 0;
     width: 100%;
-    z-index: 9999;
+    z-index: 1000000;
     pointer-events: none;
     mix-blend-mode: difference; // Theme-agnostic visibility
 }
@@ -67,7 +67,7 @@
         align-items: center;
         gap: 40px;
         pointer-events: auto !important;
-        z-index: 9999;
+        z-index: 1000000;
 
         .el{
             position: relative;
@@ -106,7 +106,7 @@
     right: clamp(1.5rem, 5vw, 5rem);
     top: 0; // Correct placement
     margin: 30px;
-    z-index: 9999;
+    z-index: 1000001;
     width: 80px;
     height: 80px;
     border-radius: 50%;
